[gd_scene load_steps=3 format=3 uid="uid://ckrr6cdh6r0or"]

[ext_resource type="Script" uid="uid://dx7m66pfmbe77" path="res://scripts/inventory_slot.gd" id="1_bxqf6"]
[ext_resource type="Texture2D" uid="uid://t8cyod5vcfvf" path="res://assets/UI/slot_bg.png" id="2_hddt5"]

[node name="InventorySlot" type="Button"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bxqf6")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("2_hddt5")

[node name="Control" type="Control" parent="AspectRatioContainer"]
layout_mode = 2
mouse_filter = 1

[node name="ItemTexture" type="TextureRect" parent="AspectRatioContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.032
anchor_top = 0.032
anchor_right = 0.968
anchor_bottom = 0.968

[node name="Panel" type="Panel" parent="."]
visible = false
show_behind_parent = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="resized" from="." to="." method="_on_resized"]
